// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SegmentsPage No data view should be rendered 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main"
    data-name="header"
    style="border-bottom: 0.5px solid #d9dae6; display: flex; height: 80px;"
  >
    <div
      class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-align-center-center StyledProps--padding-right-xlarge"
      style="flex-grow: 1;"
    >
      <h1
        class="StyledProps--font StyledProps--font-h1 StyledProps--main"
        data-name="header"
        level="1"
        style="font-weight: bold; font-size: 20px; line-height: 28px; color: rgb(34, 39, 45); display: flex; align-items: center;"
      >
        cf.shared.segments
      </h1>
      <span
        style="flex-grow: 1;"
      />
    </div>
  </div>
  <div
    class="StyledProps--font StyledProps--main"
    data-name="body"
    style="height: calc(100% - 80px); overflow: hidden; background-color: rgb(248, 250, 251);"
  >
    <div
      class="StyledProps--font StyledProps--main"
      data-name="content"
      style="height: calc(100% - 0px - 0px); overflow: auto;"
    >
      <div
        class="StyledProps--font StyledProps--main StyledProps--flex StyledProps--flex-align-center-center"
        style="width: 100%; height: 100%;"
      >
        <div
          class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
          style="align-items: center; margin-top: -48px; width: 470px;"
        >
          <img
            height="220"
            src="test-file-stub"
            width="220"
          />
          <h2
            class="StyledProps--font StyledProps--font-h2 StyledProps--main"
            level="2"
            style="font-weight: 600; font-size: 20px; line-height: 28px; color: rgb(137, 137, 143); text-align: center; padding: 30px 0px;"
          >
            cf.segments.noSegment
          </h2>
          <button
            class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
            type="button"
          >
            <span
              class="bp3-button-text"
            >
              cf.segments.create
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SegmentsPage No environment view should be rendered 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main"
    data-name="header"
    style="border-bottom: 0.5px solid #d9dae6; display: flex; height: 80px;"
  >
    <div
      class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-align-center-center StyledProps--padding-right-xlarge"
      style="flex-grow: 1;"
    >
      <h1
        class="StyledProps--font StyledProps--font-h1 StyledProps--main"
        data-name="header"
        level="1"
        style="font-weight: bold; font-size: 20px; line-height: 28px; color: rgb(34, 39, 45); display: flex; align-items: center;"
      >
        cf.shared.segments
      </h1>
      <span
        style="flex-grow: 1;"
      />
    </div>
  </div>
  <div
    class="StyledProps--font StyledProps--main"
    data-name="body"
    style="height: calc(100% - 80px); overflow: hidden; background-color: rgb(248, 250, 251);"
  >
    <div
      class="StyledProps--font StyledProps--main"
      data-name="content"
      style="height: calc(100% - 0px - 0px); overflow: auto;"
    >
      <div
        class="StyledProps--font StyledProps--main StyledProps--flex StyledProps--flex-align-center-center"
        style="height: 100%;"
      >
        <div
          class="StyledProps--font StyledProps--main StyledProps--flex"
          style="flex-direction: column;"
        >
          <img
            height="220"
            src="test-file-stub"
            width="220"
          />
          <h2
            class="StyledProps--font StyledProps--font-h2 StyledProps--main"
            level="2"
            style="padding-top: 50px; font-weight: 600; font-size: 20px; line-height: 28px; color: rgb(34, 34, 42);"
          >
            cf.noEnvironment.title
          </h2>
          <p
            class="StyledProps--font StyledProps--main"
            style="line-height: 18px; color: rgb(34, 34, 42); text-align: center; width: 400px;"
          >
            cf.noEnvironment.message
          </p>
          <button
            class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary StyledProps--padding-top-small StyledProps--padding-bottom-small StyledProps--padding-left-huge StyledProps--padding-right-huge Button--with-current-color"
            type="button"
          >
            <span
              class="bp3-button-text"
            >
              cf.environments.create.title
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SegmentsPage No environment view should be rendered 2`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main"
    data-name="header"
    style="border-bottom: 0.5px solid #d9dae6; display: flex; height: 80px;"
  >
    <div
      class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-align-center-center StyledProps--padding-right-xlarge"
      style="flex-grow: 1;"
    >
      <h1
        class="StyledProps--font StyledProps--font-h1 StyledProps--main"
        data-name="header"
        level="1"
        style="font-weight: bold; font-size: 20px; line-height: 28px; color: rgb(34, 39, 45); display: flex; align-items: center;"
      >
        cf.shared.segments
      </h1>
      <span
        style="flex-grow: 1;"
      />
    </div>
  </div>
  <div
    class="StyledProps--font StyledProps--main"
    data-name="body"
    style="height: calc(100% - 80px); overflow: hidden; background-color: rgb(248, 250, 251);"
  >
    <div
      class="StyledProps--font StyledProps--main"
      data-name="content"
      style="height: calc(100% - 0px - 0px); overflow: auto;"
    >
      <div
        class="StyledProps--font StyledProps--main StyledProps--flex StyledProps--flex-align-center-center"
        style="height: 100%;"
      >
        <div
          class="StyledProps--font StyledProps--main StyledProps--flex"
          style="flex-direction: column;"
        >
          <img
            height="220"
            src="test-file-stub"
            width="220"
          />
          <h2
            class="StyledProps--font StyledProps--font-h2 StyledProps--main"
            level="2"
            style="padding-top: 50px; font-weight: 600; font-size: 20px; line-height: 28px; color: rgb(34, 34, 42);"
          >
            cf.noEnvironment.title
          </h2>
          <p
            class="StyledProps--font StyledProps--main"
            style="line-height: 18px; color: rgb(34, 34, 42); text-align: center; width: 400px;"
          >
            cf.noEnvironment.message
          </p>
          <button
            class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary StyledProps--padding-top-small StyledProps--padding-bottom-small StyledProps--padding-left-huge StyledProps--padding-right-huge Button--with-current-color"
            type="button"
          >
            <span
              class="bp3-button-text"
            >
              cf.environments.create.title
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SegmentsPage SegmentsPage should render data correctly 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main"
    data-name="header"
    style="border-bottom: 0.5px solid #d9dae6; display: flex; height: 80px;"
  >
    <div
      class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-align-center-center StyledProps--padding-right-xlarge"
      style="flex-grow: 1;"
    >
      <h1
        class="StyledProps--font StyledProps--font-h1 StyledProps--main"
        data-name="header"
        level="1"
        style="font-weight: bold; font-size: 20px; line-height: 28px; color: rgb(34, 39, 45); display: flex; align-items: center;"
      >
        cf.shared.segments
      </h1>
      <span
        style="flex-grow: 1;"
      />
    </div>
  </div>
  <div
    class="StyledProps--font StyledProps--main"
    data-name="body"
    style="height: calc(100% - 80px); overflow: hidden; background-color: rgb(248, 250, 251);"
  >
    <div
      class="StyledProps--font StyledProps--main"
      data-name="toolbar"
      style="height: 64px; border-bottom: 0.5px solid #d9dae6; align-items: center; top: 0px; z-index: 1;"
    >
      <div
        class="Layout--horizontal StyledProps--main"
      >
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            cf.segments.create
          </span>
        </button>
      </div>
    </div>
    <div
      class="StyledProps--font StyledProps--main"
      data-name="content"
      style="height: calc(100% - 64px - 60px); overflow: auto;"
    >
      <div
        class="StyledProps--font StyledProps--main StyledProps--padding-top-medium StyledProps--padding-right-xxlarge StyledProps--padding-left-xxlarge"
      >
        <div
          class="table"
        >
          <div
            class="header"
            role="row"
          >
            <div
              class="cell"
              colspan="1"
              role="columnheader"
              style="width: 45%;"
            >
              CF.SHARED.SEGMENT
            </div>
            <div
              class="cell"
              colspan="1"
              role="columnheader"
              style="width: 25%;"
            >
              IDENTIFIER
            </div>
            <div
              class="cell"
              colspan="1"
              role="columnheader"
              style="width: 30%;"
            >
              CF.TARGETS.CREATEDDATE
            </div>
          </div>
          <div
            class="row card clickable"
            role="row"
          >
            <div
              class="cell"
              role="cell"
              style="width: 45%;"
            >
              <div
                class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main"
                style="align-items: center;"
              >
                <div
                  class="StyledProps--font StyledProps--main StyledProps--margin-right-small"
                >
                  <ul
                    class="stack"
                    style="--size: 30px; --itemContainerSize: 30px;"
                  >
                    <li
                      class="itemContainer"
                      style="--color: var(--white); --background: #BDA5F2;"
                    >
                      <p
                        class="StyledProps--font StyledProps--main"
                      >
                        SE
                      </p>
                    </li>
                  </ul>
                </div>
                <div
                  class="StyledProps--font StyledProps--main"
                >
                  <p
                    class="StyledProps--font StyledProps--main"
                    style="font-weight: 600; line-height: 24px; color: rgb(34, 34, 42);"
                  >
                    segment1
                  </p>
                </div>
              </div>
            </div>
            <div
              class="cell"
              role="cell"
              style="width: 25%;"
            >
              <p
                class="StyledProps--font StyledProps--main"
              >
                segment1
              </p>
            </div>
            <div
              class="cell"
              role="cell"
              style="width: 30%;"
            >
              <div
                class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-distribution-space-between StyledProps--flex-align-center-center"
              >
                <p
                  class="StyledProps--font StyledProps--main"
                >
                  dummy date
                </p>
                <div
                  class="StyledProps--font StyledProps--main"
                  style="text-align: right;"
                >
                  <span
                    class="bp3-popover-wrapper"
                  >
                    <span
                      class="bp3-popover-target"
                    >
                      <button
                        class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow"
                        type="button"
                      >
                        <span
                          class="bp3-icon StyledProps--main"
                          data-icon="Options"
                        >
                          <svg
                            fill="none"
                            height="16"
                            viewBox="0 0 4 16"
                            width="16"
                          >
                            <path
                              clip-rule="evenodd"
                              d="M2 12.5a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zm2-12a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zM2 7a1 1 0 100 2 1 1 0 000-2zM0 8a2 2 0 114 0 2 2 0 01-4 0z"
                              fill="currentColor"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </button>
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="StyledProps--font StyledProps--main pagination"
      data-name="pagination"
      style="height: 60px;"
    />
  </div>
</div>
`;
